# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./tradingProfile";
 export * from "./signalHistory";
 export * from "./brokerSession";
 export * from "./portfolioPosition";
+export * from "./journalEntry";
